<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ok">OK</string>
    <string name="status">status:</string>
    <string name="file_name">file name:</string>
    <string name="download_success">Success</string>
    <string name="download_fail">Failed</string>
    <string name="download">Download</string>
    <string name="load">load</string>

    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit-Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="cloud_download">cloud download</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="github_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>

    <string name="check_status">Check download status</string>
    <string name="notification_channel_id">LoadApp_01</string>
</resources>
