<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark"
            android:backgroundTintMode="add"
            android:contentDescription="@string/cloud_download"
            android:foregroundTintMode="multiply"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cloud_download_24"
            app:tint="@android:color/holo_purple"
            tools:ignore="ImageContrastCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/download_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view">

            <RadioButton
                android:id="@+id/radioGlide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glide_image_loading_library_by_bumptech"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioLoadApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loadapp_current_repository_by_udacity"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioRetrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/retrofit_type_safe_http_client_for_android_and_java_by_square_inc"
                android:textSize="18sp" />
        </RadioGroup>

        <com.udacity.DownloadButton
            android:id="@+id/download_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:backColor="@color/colorPrimary"
            app:circleColor="@color/colorAccent"
            app:fillColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>