<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail"
        app:layoutDescription="@xml/content_detail_motion_scene">


        <TextView
            android:id="@+id/fileName_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/file_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/fileName_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/fileName_label_tv"
            app:layout_constraintTop_toTopOf="@+id/fileName_label_tv"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/status_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="@id/fileName_label_tv"
            app:layout_constraintTop_toBottomOf="@id/fileName_tv"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/status_label_tv"
            app:layout_constraintStart_toEndOf="@id/status_label_tv"
            />



        <Button
            android:id="@+id/ok_btn"
            android:layout_width="306dp"
            android:layout_height="54dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.motion.widget.MotionLayout></layout>